Make finger numbers much more readable - fix '1' looking like dot
Improvements:
- Circle radius: 6px → 8px (33% larger)
- Font size: 12px → 14px (easier to read)
- Font family: Arial (has more distinctive '1' with base/serif)
- Y position: adjusted for better vertical centering

The '1' finger indicators now look clearly like numbers instead of dots, especially in the i-iv-i-iv chord progression.

--- a/index.html
+++ b/index.html
@@ -2533,11 +2533,11 @@
           const isRoot = voicingData.note === root;
           const fill = isRoot ? theme.noteColor : theme.textSecondary;
           const fingerColor = themeName === 'dark' ? '#14141f' : '#14141f';
-          svg += `<circle cx="${x}" cy="${y}" r="6" fill="${fill}"/>`;
+          svg += `<circle cx="${x}" cy="${y}" r="8" fill="${fill}"/>`;
 
           // Finger number
           if (voicingData.finger > 0) {
-            svg += `<text x="${x}" y="${y + 4}" font-family="sans-serif" font-size="12" font-weight="bold" fill="${fingerColor}" text-anchor="middle">${voicingData.finger}</text>`;
+            svg += `<text x="${x}" y="${y + 5}" font-family="Arial, sans-serif" font-size="14" font-weight="bold" fill="${fingerColor}" text-anchor="middle">${voicingData.finger}</text>`;
           }
         }
       });
